delete  / in code

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@ Dr Hamdani University of Tissemsilt -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University</title>
-    <link rel="stylesheet" href="/CSS/index.css" />
+    <link rel="stylesheet" href="CSS/index.css" />
     <link rel="stylesheet" href="CSS/headerUniv.css" />
-    <link rel="stylesheet" href="/CSS/navBar.css" />
+    <link rel="stylesheet" href="CSS/navBar.css" />
 
     <link rel="stylesheet" href="CSS/sideBar.css" />
   </head>
   <body>
     <header class="headerUniv">
-      <div class="leftLogo"><img src="/img/logo.jpg" alt="logo" /></div>
+      <div class="leftLogo"><img src="img/logo.jpg" alt="logo" /></div>
       <div class="textlogo">
         <h4>
           Ministry of Higher Education and Scientific Research <br />
@@ -24,7 +24,7 @@ Dr Hamdani University of Tissemsilt -->
           Department of Mathematics and Computer Sciences
         </h4>
       </div>
-      <div class="rightLogo"><img src="/img/logo.jpg" alt="logo" /></div>
+      <div class="rightLogo"><img src="img/logo.jpg" alt="logo" /></div>
     </header>
 
     <nav class="navBar">
@@ -32,7 +32,7 @@ Dr Hamdani University of Tissemsilt -->
       <a href="#">About</a>
       <a href="#">Faculties</a>
       <a href="#">Contact</a>
-      <a href="/login.html">Sign up</a>
+      <a href="login.html">Sign up</a>
     </nav>
 
     <div class="page">
@@ -139,12 +139,12 @@ Dr Hamdani University of Tissemsilt -->
       </div>
 
       <div class="rightBar">
-        <img src="/img/book.jpg" alt="" />
-        <img src="/img/book.jpg" alt="" />
-        <img src="/img/book.jpg" alt="" />
-        <img src="/img/book.jpg" alt="" />
-        <img src="/img/book.jpg" alt="" />
-        <img src="/img/book.jpg" alt="" />
+        <img src="img/book.jpg" alt="" />
+        <img src="img/book.jpg" alt="" />
+        <img src="img/book.jpg" alt="" />
+        <img src="img/book.jpg" alt="" />
+        <img src="img/book.jpg" alt="" />
+        <img src="img/book.jpg" alt="" />
       </div>
     </div>
     <footer class="footer">
