--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@ Dr Hamdani University of Tissemsilt -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login</title>
-    <link rel="stylesheet" href="/CSS/login.css" />
+    <link rel="stylesheet" href="CSS/login.css" />
   </head>
   <body>
     <form action="post">
@@ -35,7 +35,7 @@ Dr Hamdani University of Tissemsilt -->
 
         <div class="form-container">
           <button>Cancel</button>
-          <button onclick="location.href='/Profile.html';">Enter</button>
+          <button onclick="location.href='Profile.html';">Enter</button>
         </div>
       </fieldset>
     </form>
