--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@ Dr Hamdani University of Tissemsilt -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile</title>
-    <link rel="stylesheet" href="/CSS/profile.css" />
+    <link rel="stylesheet" href="CSS/profile.css" />
   </head>
   <fieldset class="page">
     <form action="">
@@ -102,7 +102,7 @@ Dr Hamdani University of Tissemsilt -->
       <form>
         <fieldset class="btn-goHome">
           
-      <button onclick="location.href='/index.html';">Go HOME</button>
+      <button onclick="location.href='index.html';">Go HOME</button>
       </fieldset>
     </form>
   </body>
