--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@ Dr Hamdani University of Tissemsilt -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>University</title>
-    <link rel="stylesheet" href="CSS/index.css" />
-    <link rel="stylesheet" href="CSS/headerUniv.css" />
-    <link rel="stylesheet" href="CSS/navBar.css" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>ISIL Courses</title>
+    <link href="CSS/index.css" rel="stylesheet" />
+    <link href="CSS/headPage.css" rel="stylesheet" />
+    <link href="CSS/navBar.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="CSS/sideBar.css" />
+    <link href="CSS/sideBar.css" rel="stylesheet" />
   </head>
   <body>
-    <header class="headerUniv">
-      <div class="leftLogo"><img src="img/logo.jpg" alt="logo" /></div>
-      <div class="textlogo">
+    <header class="headerPage">
+      <div><img src="img/logo.jpg" alt="logo" /></div>
+      <div>
         <h4>
           Ministry of Higher Education and Scientific Research <br />
           University of Tissemsilt <br />
@@ -24,147 +24,144 @@ Dr Hamdani University of Tissemsilt -->
           Department of Mathematics and Computer Sciences
         </h4>
       </div>
-      <div class="rightLogo"><img src="img/logo.jpg" alt="logo" /></div>
+      <div><img src="img/logo.jpg" alt="logo" /></div>
     </header>
 
     <nav class="navBar">
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Faculties</a>
-      <a href="#">Contact</a>
-      <a href="login.html">Sign up</a>
+      <a href="#">OOP</a>
+      <a href="#">Web Developement</a>
+      <a href="#">Canevas</a>
     </nav>
 
-    <div class="page">
-      <div class="lefBar">
-        <div class="lefBar-study">
-          <h3>Study</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti
-            consectetur, tenetur quos voluptatum ducimus nesciunt vitae,
-            voluptas aut sequi reprehenderit fuga unde laborum a, aliquid est
-            dolor adipisci quisquam distinctio.
-          </p>
-        </div>
-        <div class="lefBar-courses">
-          <h3>Course and programme finder</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione est
-            fugit unde nostrum maxime dolorem minima. Fugit culpa quasi cumque
-            explicabo atque molestias voluptatem inventore mollitia voluptates?
-            Voluptatum, cupiditate ipsam?
-          </p>
-        </div>
-        <div class="lefBar-popularLinks">
-          <h3>Popular links</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, et?
-            Facere minima possimus numquam vel exercitationem praesentium
-            aspernatur rem ipsa.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia,
-            illo.
-          </p>
-          <p>Lorem ipsum dolor sit amet.</p>
-        </div>
-      </div>
-      <div class="artcl">
-        <header class="headerArtcl">
-          <h1>University of Tissemsilt</h1>
-        </header>
-        <section>
-          <h4>Histrory :</h4>
+    <div class="grid-page">
+      <div class="leftBar">
+        <h3>Dr. Hamdani Mustapha</h3>
+        <h3>OOP</h3>
+        <ul>
+          <li>
+            <a href="OOP/OOP 01 -Introduction.pdf">
+              Chapter 01 : Introduction to OOP
+            </a>
+          </li>
 
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit
-            sed quidem praesentium, reiciendis aliquam ipsum est, at
-            perspiciatis autem necessitatibus ducimus dignissimos sapiente unde
-            impedit repudiandae, tempore distinctio enim dolorem fuga
-            voluptatem. Iusto perspiciatis quia tenetur accusamus qui autem
-            perferendis unde, dolore expedita voluptate atque tempore placeat
-            libero inventore earum?
-          </p>
+          <li>
+            <a href="OOP/OOP 02 -IntroductionToJava.pdf">
+              Chapter 02 : Introduction to Java
+            </a>
+          </li>
 
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            saepe eveniet excepturi accusantium itaque laudantium in deleniti
-            quidem blanditiis consequatur tempore sed laboriosam eius error
-            dignissimos cum dolorum, quasi voluptas dicta alias magnam? Porro,
-            voluptatem nulla autem deserunt error in!
-          </p>
-        </section>
+          <li>
+            <a href="OOP/OOP 03 Encap.pdf"> Chapter 03 : Encapsulation </a>
+          </li>
 
-        <section>
-          <h3>Ahmed ben Yahia El Wancharissi</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo,
-            recusandae vitae. Ratione, itaque, culpa quas quisquam quasi officia
-            alias ab magnam reiciendis deserunt esse omnis assumenda blanditiis?
-            Laborum, numquam beatae sint dolore necessitatibus doloremque.
-            Dolores sed officiis fugit et ducimus tempora quaerat corrupti, nisi
-            consectetur. Exercitationem laborum, voluptatum eos sunt perferendis
-            aut, deleniti dignissimos neque quia dolor dicta nostrum totam quasi
-            repudiandae tempora aperiam placeat nihil! Inventore odio possimus
-            asperiores, molestias enim ullam sequi, consequuntur fugit,
-            consequatur velit eos repellendus.
-          </p>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum
-            consectetur cumque provident officiis! Unde optio enim consequatur
-            ex ipsam, blanditiis ut recusandae eligendi odio deserunt nemo quam
-            at doloribus repellat?
-          </p>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore,
-            aliquam excepturi molestiae dolorum assumenda maxime tenetur harum,
-            tempore deserunt, id earum recusandae nisi voluptatibus explicabo
-            illum temporibus corrupti aliquid! Necessitatibus tenetur quaerat
-            fugit cupiditate at a incidunt, natus vitae exercitationem doloribus
-            quo blanditiis obcaecati eveniet! Facilis nesciunt modi saepe iure.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-            fugiat dicta blanditiis iusto reiciendis tempore iure sequi
-            molestiae voluptas, adipisci error non nemo laborum provident,
-            eveniet numquam odit ducimus delectus eaque quae. At assumenda
-            adipisci, quaerat culpa qui eum dignissimos consequatur, architecto
-            incidunt, corrupti quia recusandae dolorem asperiores accusamus
-            aperiam laboriosam alias quam? Ipsa recusandae eligendi numquam,
-            velit maiores, maxime repudiandae autem porro, explicabo suscipit
-            eum repellat modi! Sapiente dolores dicta porro natus nisi? Dolor
-            odio eaque consectetur quas quasi.
-          </p>
-        </section>
+          <li>
+            <a href="OOP/OOP 04 Inheritance.pdf">Chapter 04 : inheritance</a>
+          </li>
+        </ul>
+
+        <h3>Link to practical class</h3>
       </div>
 
-      <div class="rightBar">
-        <img src="img/book.jpg" alt="" />
-        <img src="img/book.jpg" alt="" />
-        <img src="img/book.jpg" alt="" />
-        <img src="img/book.jpg" alt="" />
-        <img src="img/book.jpg" alt="" />
-        <img src="img/book.jpg" alt="" />
+      <div class="content">
+        <h4>
+          Semestre : 4 <br />
+          Unité d’enseignement méthodologique: UEM <br />
+          Matière : Programmation Orientée Objet <br /><br />
+          Crédits : 4 <br />
+          Coefficient : 2 <br />
+        </h4>
+
+        <h4>Objectifs de l’enseignement :</h4>
+        <p>
+          L’objectif de ce cours est l'introduction des concepts de base de la
+          programmation orientée objet (POO) par la pratique en utilisant le
+          langage Java. Chaque chapitre comporte certaines notions qui sont
+          traduites à sa fin en Java pour que l’étudiant puisse traduire les
+          concepts théoriques acquis en pratique. A la fin du semestre,
+          l'étudiant est censé avoir acquis les compétences suivantes :
+        </p>
+        <ol>
+          <li>
+            L'essence de la programmation objet et sa transformation en langage
+            Java
+          </li>
+          <li>
+            Acquérir un raisonnement intuitif pour donner une solution à un
+            problème simple selon l’approche orientée objet
+          </li>
+          <li>Ecrire un programme en langage Java qui soit fonctionnel</li>
+          <li>L'essence et l'importance du raisonnement OO et de la POO</li>
+        </ol>
+
+        <h4>Connaissances préalables :</h4>
+        <p>Langage C</p>
+
+        <h4>Contenu de la matière :</h4>
+        <h5>Chapitre 1. Bases de la POO</h5>
+        <ol>
+          <li>Introduction</li>
+          <li>
+            Concepts fondamentaux de la POO
+            <ol type="a">
+              <li>Petit historique de la POO</li>
+              <li>Programmation procédurale vs programmation par objets</li>
+              <li>Réutilisation de code</li>
+              <li>Introduction à la modularité</li>
+            </ol>
+          </li>
+          <li>
+            Les d'objets et les classes
+            <ol type="a">
+              <li>Notions d’objet</li>
+              <li>Notions de classe</li>
+              <li>Attributs</li>
+              <li>Notion de message</li>
+              <li>Résolution de problèmes par échange de messages</li>
+            </ol>
+          </li>
+          <li>
+            Introduction à Java
+            <ol type="a">
+              <li>Types et structures de contrôle en Java</li>
+              <li>Classes et instanciation</li>
+              <li>Méthodes</li>
+              <li>Les références et passage de paramètres</li>
+              <li>Entrées/Sorties</li>
+              <li>Constructeur par défaut et autres constructeurs</li>
+              <li>Destructeurs</li>
+            </ol>
+          </li>
+        </ol>
+
+        <!-- Remaining chapters omitted for brevity -->
+
+        <h4>Mode d’évaluation :</h4>
+        <p>Examen (60%), contrôle continu (40%)</p>
+
+        <h4>Références</h4>
+        <ol>
+          <li>
+            Apprendre la Programmation Orientée Objet avec le langage Java. Luc
+            Gervais. Eni. 2ème édition.
+          </li>
+          <li>
+            <a
+              href="https://openclassrooms.com/courses/apprenez-a-programmer-en-java"
+              >https://openclassrooms.com/courses/apprenez-a-programmer-en-java</a
+            >
+          </li>
+          <li>
+            Java 8 - Apprendre la Programmation Orientée Objet et maîtrisez le
+            langage. Thierry GROUSSARD Luc GERVAIS. Edition ENI. 2015.
+          </li>
+          <li>
+            La programmation objet en Java. Michel Divay. Edition DUNOD. 2006.
+          </li>
+        </ol>
       </div>
+      <div class="rightBar"><h3>Site under construction</h3></div>
     </div>
-    <footer class="footer">
-      <div class="footer-ftr1">
-        <h3>Climate Action</h3>
-        <h3>Weather</h3>
-      </div>
 
-      <div class="footer-ftr2">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero
-          molestiae vitae odio non explicabo doloribus dicta fugit quas fuga
-          consectetur. Error excepturi dolor provident consequuntur ab
-          architecto adipisci unde vitae.
-        </p>
-        <p>
-          Lorem ipsum dolor, sit amet . Delectus libero numquam odio non
-          mollitia enim, laboriosam ipsam qui tempore praesentium.
-        </p>
-      </div>
-    </footer>
+    <footer class="footer">links</footer>
   </body>
 </html>
