--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Dr Hamdani University of Tissemsilt -->
   </head>
   <body>
     <header class="headerPage">
-      <div><img src="img/logo.jpg" alt="logo" /></div>
+      <div><img src="img/logo.png" alt="logo" /></div>
       <div>
         <h4>
           Ministry of Higher Education and Scientific Research <br />
@@ -24,44 +24,57 @@ Dr Hamdani University of Tissemsilt -->
           Department of Mathematics and Computer Sciences
         </h4>
       </div>
-      <div><img src="img/logo.jpg" alt="logo" /></div>
+      <div><img src="img/logo.png" alt="logo" /></div>
     </header>
 
     <nav class="navBar">
-      <a href="#">OOP</a>
+      <a href="#">Object-Orriented Proramming</a>
       <a href="#">Web Developement</a>
-      <a href="#">Canevas</a>
     </nav>
 
     <div class="grid-page">
       <div class="leftBar">
-        <h3>Dr. Hamdani Mustapha</h3>
-        <h3>OOP</h3>
-        <ul>
-          <li>
-            <a href="OOP/OOP 01 -Introduction.pdf">
-              Chapter 01 : Introduction to OOP
-            </a>
-          </li>
+        <div class="authot">
+          <h3>
+            Lecturer : <br />
+            Dr. HAMDANI MUSTAPHA
+          </h3>
+        </div>
+        <div>
+          <h3>OOP</h3>
+          <ul>
+            <li>
+              <a href="OOP/OOP 01 -Introduction.pdf"> Introduction to OOP </a>
+            </li>
 
-          <li>
-            <a href="OOP/OOP 02 -IntroductionToJava.pdf">
-              Chapter 02 : Introduction to Java
-            </a>
-          </li>
+            <li>
+              <a href="OOP/OOP 02 -IntroductionToJava.pdf">
+                Introduction to Java
+              </a>
+            </li>
 
-          <li>
-            <a href="OOP/OOP 03 Encap.pdf"> Chapter 03 : Encapsulation </a>
-          </li>
+            <li>
+              <a href="OOP/OOP 03 Encap.pdf"> Encapsulation </a>
+            </li>
 
-          <li>
-            <a href="OOP/OOP 04 Inheritance.pdf">Chapter 04 : inheritance</a>
-          </li>
-        </ul>
+            <li>
+              <a href="OOP/OOP 04 Inheritance.pdf">inheritance</a>
+            </li>
+          </ul>
+        </div>
 
-        <h3>Link to practical class</h3>
+        <div>
+          <h3>Link to practical class</h3>
+        </div>
+
+        <div>
+          <h3>Caneves</h3>
+          <ul>
+            <li><a href="#">ISIL</a></li>
+            <li><a href="#">Applied Mathematics</a></li>
+          </ul>
+        </div>
       </div>
-
       <div class="content">
         <h4>
           Semestre : 4 <br />
@@ -161,7 +174,24 @@ Dr Hamdani University of Tissemsilt -->
       </div>
       <div class="rightBar"><h3>Site under construction</h3></div>
     </div>
+    <footer class="footer">
+      <div class="links">
+        <h3>Links:</h3>
+        <a href="https://www.univ-tissemsilt.dz/">University of Tissemsilt</a>
 
-    <footer class="footer">links</footer>
+        <a href="http://dspace.univ-tissemsilt.dz/">DSpace</a>
+        <a href="https://www.sndl.cerist.dz/index.php">SNDL</a>
+      </div>
+
+      <div class="links">
+        <h3>Facebook :</h3>
+        <a href="https://www.facebook.com/fst.univtissemsilt"
+          >Faculty of Sciences and Technology</a
+        >
+        <a href="https://www.facebook.com/University.Tissemsilt"
+          >University.Tissemsilt</a
+        >
+      </div>
+    </footer>
   </body>
 </html>
