--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Dr Hamdani University of Tissemsilt -->
         <p>Langage C</p>
 
         <h4>Contenu de la matière :</h4>
-        <h5>Chapitre 1. Bases de la POO</h5>
+        <h3>Chapitre 1. Bases de la POO</h3>
         <ol>
           <li>Introduction</li>
           <li>
@@ -146,7 +146,49 @@ Dr Hamdani University of Tissemsilt -->
           </li>
         </ol>
 
-        <!-- Remaining chapters omitted for brevity -->
+        <h3>Chapitre 2. Encapsulation</h3>
+        <h4>1. Niveaux de visibilité</h4>
+        <h4>2. Encapsulation</h4>
+        <ol>
+          <li>a. Encapsulation de données (attributs)</li>
+          <li>b. Encapsulation de code (Messages)</li>
+        </ol>
+        <h4>3. Encapsulation en Java</h4>
+        <ol>
+          <li>a. Contrôle d’accès (public, private)</li>
+          <li>b. Accesseurs (get et set)</li>
+          <li>c. Accès à l’instance (this)</li>
+          <li>d. Variables et méthodes de classe (static)</li>
+        </ol>
+
+        <h3>Chapitre 3. Héritage</h3>
+        <h4>1. Sous-classes et héritage</h4>
+        <h4>2. Héritage simple, héritage multiple</h4>
+        <h4>3. Hiérarchie de classes</h4>
+        <h4>4. Polymorphisme</h4>
+        <h4>5. Héritage et polymorphisme en Java</h4>
+        <ol>
+          <li>a. Héritage simple (extends)</li>
+          <li>
+            b. Encapsulation dans l’héritage
+            <ol>
+              <li>i. Protection des membres (protected)</li>
+              <li>ii. Constructeurs des classes (this(), super())</li>
+              <li>iii. Classe ‘Object’</li>
+              <li>iv. Transtypage implicite et explicite</li>
+              <li>v. Limitation de l’héritage (final)</li>
+            </ol>
+          </li>
+          <li>
+            c. Polymorphisme
+            <ol>
+              <li>i. Surcharge de méthodes</li>
+              <li>ii. Redéfinition de méthodes</li>
+            </ol>
+          </li>
+          <li>d. Classes abstraites (utilisation et importance)</li>
+          <li>e. Interfaces (utilisation et importance)</li>
+        </ol>
 
         <h4>Mode d’évaluation :</h4>
         <p>Examen (60%), contrôle continu (40%)</p>
