add course: web dev

--- a/index.html
+++ b/index.html
@@ -6,31 +6,16 @@ Dr Hamdani University of Tissemsilt -->
   <head>
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>ISIL Courses</title>
+    <title>OOP</title>
     <link href="CSS/index.css" rel="stylesheet" />
     <link href="CSS/headPage.css" rel="stylesheet" />
     <link href="CSS/navBar.css" rel="stylesheet" />
 
     <link href="CSS/sideBar.css" rel="stylesheet" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <header class="headerPage">
-      <div><img src="img/logo.png" alt="logo" /></div>
-      <div>
-        <h4>
-          Ministry of Higher Education and Scientific Research <br />
-          University of Tissemsilt <br />
-          Faculty of Sciences and Technology <br />
-          Department of Mathematics and Computer Sciences
-        </h4>
-      </div>
-      <div><img src="img/logo.png" alt="logo" /></div>
-    </header>
-
-    <nav class="navBar">
-      <a href="#">Object-Orriented Proramming</a>
-      <a href="#">Web Developement</a>
-    </nav>
+    <script src="/src/header.js"></script>
 
     <div class="grid-page">
       <div class="leftBar">
@@ -41,7 +26,7 @@ Dr Hamdani University of Tissemsilt -->
           </h3>
         </div>
         <div>
-          <h3>OOP</h3>
+          <h3>Object-Orriented Proramming</h3>
           <ul>
             <li>
               <a href="OOP/OOP 01 -Introduction.pdf"> Introduction to OOP </a>
@@ -65,13 +50,24 @@ Dr Hamdani University of Tissemsilt -->
 
         <div>
           <h3>Link to practical class</h3>
+          <ul>
+            <li>
+              <a
+                href="https://github.com/hamdani2023/javaPOO_ISIL_S04"
+                target="_blank"
+                >Java Projects</a
+              >
+            </li>
+          </ul>
         </div>
 
         <div>
-          <h3>Caneves</h3>
+          <h3>Exams and correction</h3>
           <ul>
-            <li><a href="#">ISIL</a></li>
-            <li><a href="#">Applied Mathematics</a></li>
+            <li>Exam S4 (NS)</li>
+            <li>Correction (Exam S4)</li>
+            <li>Exam S4 (RT)</li>
+            <li>Correction (RT S4)</li>
           </ul>
         </div>
       </div>
@@ -216,24 +212,8 @@ Dr Hamdani University of Tissemsilt -->
       </div>
       <div class="rightBar"><h3>Site under construction</h3></div>
     </div>
-    <footer class="footer">
-      <div class="links">
-        <h3>Links:</h3>
-        <a href="https://www.univ-tissemsilt.dz/">University of Tissemsilt</a>
-
-        <a href="http://dspace.univ-tissemsilt.dz/">DSpace</a>
-        <a href="https://www.sndl.cerist.dz/index.php">SNDL</a>
-      </div>
-
-      <div class="links">
-        <h3>Facebook :</h3>
-        <a href="https://www.facebook.com/fst.univtissemsilt"
-          >Faculty of Sciences and Technology</a
-        >
-        <a href="https://www.facebook.com/University.Tissemsilt"
-          >University.Tissemsilt</a
-        >
-      </div>
-    </footer>
+   
+      <script src="/src/footer.js"></script></div>
+     
   </body>
 </html>
