correction somm gram errors

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Dr Hamdani University of Tissemsilt -->
             </li>
 
             <li>
-              <a href="OOP/OOP 04 Inheritance.pdf">inheritance</a>
+              <a href="OOP/OOP 04 Inheritance.pdf">Inheritance</a>
             </li>
           </ul>
         </div>
