--- a/webDev.html
+++ b/webDev.html
@@ -64,6 +64,13 @@ Dr Hamdani University of Tissemsilt -->
                 >Web Developement Projects : HTML, CSS,  FLEX, ..</a
               >
             </li>
+ <li> 
+            <a
+            href="https://github.com/hamdani2023/.github.io"
+            target="_blank"
+            >Creating and deploying a Site (this)</a
+          >
+        </li>
           </ul>
         </div>
 
