correction somm gram errors

--- a/webDev.html
+++ b/webDev.html
@@ -23,7 +23,7 @@ Dr Hamdani University of Tissemsilt -->
             background-color: rgba(64, 238, 48, 0.192);
         }
     </style>
-    <script src="/src/header.js"></script>
+    <script src="src/header.js"></script>
 
     <div class="grid-page">
       <div class="leftBar">
