--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Dr Hamdani University of Tissemsilt -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <script src="/src/header.js"></script>
+    <script src="src/header.js"></script>
 
     <div class="grid-page">
       <div class="leftBar">
