--- a/src/header.html
+++ b/src/header.html
@@ -17,6 +17,6 @@
 </div>
 
 <nav class="navBar">
-  <a href="/index.html">Object-Orriented Proramming</a>
+  <a href="index.html">Object-Orriented Proramming</a>
   <a href="webDev.html">Web Developement</a>
 </nav>
