add footers for pages

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Dr Hamdani University of Tissemsilt -->
       <div class="rightBar"><h3>Site under construction</h3></div>
     </div>
    
-      <script src="/src/footer.js"></script></div>
+      <script src="src/footer.js"></script></div>
      
   </body>
 </html>
