make courses in FRAME

--- a/webDev.html
+++ b/webDev.html
@@ -27,27 +27,31 @@ Dr Hamdani University of Tissemsilt -->
 
     <div class="grid-page">
       <div class="leftBar">
-        <div class="authot">
+        <div class="author">
           <h3>
             Lecturer : <br />
             Dr. HAMDANI MUSTAPHA
           </h3>
         </div>
         <div>
-          <h3>Web Developement</h3>
+          <h3>Download : Web Developement</h3>
           <ul>
             <li>
-              <a href="DevWeb/01 World Wide Web.pdf">World Wide Web</a>
+              <a href="DevWeb/01 World Wide Web.pdf">World Wide Web.pdf</a>
             </li>
 
             <li>
               <a href="DevWeb/02 HTML.pdf">
-                HTML
+                HTML.pdf
               </a>
             </li>
 
             <li>
-              <a href="DevWeb/03 CSS.pdf"> CSS </a>
+              <a href="DevWeb/03 CSS.pdf"> CSS.pdf </a>
+            </li>
+
+            <li>
+              <a href="DevWeb/04 Java Script-Inputs.pdf">Manipulating forms with JS.pdf</a>
             </li>
 
           
@@ -88,7 +92,17 @@ Dr Hamdani University of Tissemsilt -->
           </ul>
         </div>
       </div>
+
       <div class="content">
+        <iframe
+        src="DevWeb/Web Dev.pdf"
+        width="100%"
+        height="100%"
+        loading="lazy"
+        title="Web Dev-Tissemsilt"
+    ></iframe>
+      </div>
+      <!-- <div class="content">
         <h4>
           Semestre : 4 <br />
           Unité d'enseignement méthodologique: UEM <br />
@@ -200,7 +214,7 @@ Dr Hamdani University of Tissemsilt -->
         <p>Mathieu Lacroix, "Introduction Web: Cours". Université paris 13, 2013.</p>
         <p>Société Digimind. "Le Web 2.0 pour la veille et la recherche d’information, Exploitez les ressources du web social", Digimind, juin 2007.</p>
     
-      </div>
+      </div> -->
       <div class="rightBar"><h3>Site under construction</h3></div>
     </div>
    
