--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@ Dr Hamdani University of Tissemsilt -->
 
     <div class="grid-page">
       <div class="leftBar">
-        <div class="authot">
+        <div class="author">
           <h3>
             Lecturer : <br />
             Dr. HAMDANI MUSTAPHA
           </h3>
         </div>
         <div>
-          <h3>Object-Orriented Proramming</h3>
+          <h3>Download : OOP-with-Java</h3>
           <ul>
             <li>
-              <a href="OOP/OOP 01 -Introduction.pdf"> Introduction to OOP </a>
+              <a href="OOP/OOP 01 -Introduction.pdf"> Introduction to OOP.pdf </a>
             </li>
 
             <li>
               <a href="OOP/OOP 02 -IntroductionToJava.pdf">
-                Introduction to Java
+                Introduction to Java.pdf
               </a>
             </li>
 
             <li>
-              <a href="OOP/OOP 03 Encap.pdf"> Encapsulation </a>
+              <a href="OOP/OOP 03 Encap.pdf"> Encapsulation.pdf </a>
             </li>
 
             <li>
-              <a href="OOP/OOP 04 Inheritance.pdf">Inheritance</a>
+              <a href="OOP/OOP 04 Inheritance.pdf">Inheritance.pdf</a>
             </li>
           </ul>
         </div>
@@ -72,6 +72,15 @@ Dr Hamdani University of Tissemsilt -->
         </div>
       </div>
       <div class="content">
+        <iframe
+        src="OOP/OOP Java.pdf"
+        width="100%"
+        height="100%"
+        loading="lazy"
+        title="OOP-Tissemsilt"
+    ></iframe>
+      </div>
+      <!-- <div class="content">
         <h4>
           Semestre : 4 <br />
           Unité d’enseignement méthodologique: UEM <br />
@@ -209,7 +218,7 @@ Dr Hamdani University of Tissemsilt -->
             La programmation objet en Java. Michel Divay. Edition DUNOD. 2006.
           </li>
         </ol>
-      </div>
+      </div> -->
       <div class="rightBar"><h3>Site under construction</h3></div>
     </div>
    
