--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ Dr Hamdani University of Tissemsilt -->
 
     <link href="CSS/sideBar.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   
+  
   </head>
   <body>
     <script src="src/header.js"></script>
@@ -72,13 +74,12 @@ Dr Hamdani University of Tissemsilt -->
         </div>
       </div>
       <div class="content">
-        <iframe
-        src="OOP/OOP Java.pdf"
-        width="100%"
-        height="100%"
-        loading="lazy"
-        title="OOP-Tissemsilt"
-    ></iframe>
+        
+        <object 
+        data="OOP/OOP Java.pdf" 
+        type="application/pdf"
+         width="100%" 
+         height="100%">
       </div>
       <!-- <div class="content">
         <h4>
