--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@ Dr Hamdani University of Tissemsilt -->
 
     <link href="CSS/sideBar.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   
-  
   </head>
   <body>
     <script src="src/header.js"></script>
@@ -27,11 +25,14 @@ Dr Hamdani University of Tissemsilt -->
             Dr. HAMDANI MUSTAPHA
           </h3>
         </div>
+
         <div>
           <h3>Download : OOP-with-Java</h3>
           <ul>
             <li>
-              <a href="OOP/OOP 01 -Introduction.pdf"> Introduction to OOP.pdf </a>
+              <a href="OOP/OOP 01 -Introduction.pdf">
+                Introduction to OOP.pdf
+              </a>
             </li>
 
             <li>
@@ -73,157 +74,20 @@ Dr Hamdani University of Tissemsilt -->
           </ul>
         </div>
       </div>
+
       <div class="content">
-        
-        <object 
-        data="OOP/OOP Java.pdf" 
-        type="application/pdf"
-         width="100%" 
-         height="100%">
-      </div>
-      <!-- <div class="content">
-        <h4>
-          Semestre : 4 <br />
-          Unité d’enseignement méthodologique: UEM <br />
-          Matière : Programmation Orientée Objet <br /><br />
-          Crédits : 4 <br />
-          Coefficient : 2 <br />
-        </h4>
+           <!-- <object data="OOP/OOP Java.pdf" type="application/pdf" width="100%" height="100%"> -->
+            <embed
+            src="OOP/OOP Java.pdf"
+            type="application/pdf"
+            width="100%"
+            height="600px"
+         />
+          </div>
 
-        <h4>Objectifs de l’enseignement :</h4>
-        <p>
-          L’objectif de ce cours est l'introduction des concepts de base de la
-          programmation orientée objet (POO) par la pratique en utilisant le
-          langage Java. Chaque chapitre comporte certaines notions qui sont
-          traduites à sa fin en Java pour que l’étudiant puisse traduire les
-          concepts théoriques acquis en pratique. A la fin du semestre,
-          l'étudiant est censé avoir acquis les compétences suivantes :
-        </p>
-        <ol>
-          <li>
-            L'essence de la programmation objet et sa transformation en langage
-            Java
-          </li>
-          <li>
-            Acquérir un raisonnement intuitif pour donner une solution à un
-            problème simple selon l’approche orientée objet
-          </li>
-          <li>Ecrire un programme en langage Java qui soit fonctionnel</li>
-          <li>L'essence et l'importance du raisonnement OO et de la POO</li>
-        </ol>
-
-        <h4>Connaissances préalables :</h4>
-        <p>Langage C</p>
-
-        <h4>Contenu de la matière :</h4>
-        <h3>Chapitre 1. Bases de la POO</h3>
-        <ol>
-          <li>Introduction</li>
-          <li>
-            Concepts fondamentaux de la POO
-            <ol type="a">
-              <li>Petit historique de la POO</li>
-              <li>Programmation procédurale vs programmation par objets</li>
-              <li>Réutilisation de code</li>
-              <li>Introduction à la modularité</li>
-            </ol>
-          </li>
-          <li>
-            Les d'objets et les classes
-            <ol type="a">
-              <li>Notions d’objet</li>
-              <li>Notions de classe</li>
-              <li>Attributs</li>
-              <li>Notion de message</li>
-              <li>Résolution de problèmes par échange de messages</li>
-            </ol>
-          </li>
-          <li>
-            Introduction à Java
-            <ol type="a">
-              <li>Types et structures de contrôle en Java</li>
-              <li>Classes et instanciation</li>
-              <li>Méthodes</li>
-              <li>Les références et passage de paramètres</li>
-              <li>Entrées/Sorties</li>
-              <li>Constructeur par défaut et autres constructeurs</li>
-              <li>Destructeurs</li>
-            </ol>
-          </li>
-        </ol>
-
-        <h3>Chapitre 2. Encapsulation</h3>
-        <h4>1. Niveaux de visibilité</h4>
-        <h4>2. Encapsulation</h4>
-        <ol>
-          <li>a. Encapsulation de données (attributs)</li>
-          <li>b. Encapsulation de code (Messages)</li>
-        </ol>
-        <h4>3. Encapsulation en Java</h4>
-        <ol>
-          <li>a. Contrôle d’accès (public, private)</li>
-          <li>b. Accesseurs (get et set)</li>
-          <li>c. Accès à l’instance (this)</li>
-          <li>d. Variables et méthodes de classe (static)</li>
-        </ol>
-
-        <h3>Chapitre 3. Héritage</h3>
-        <h4>1. Sous-classes et héritage</h4>
-        <h4>2. Héritage simple, héritage multiple</h4>
-        <h4>3. Hiérarchie de classes</h4>
-        <h4>4. Polymorphisme</h4>
-        <h4>5. Héritage et polymorphisme en Java</h4>
-        <ol>
-          <li>a. Héritage simple (extends)</li>
-          <li>
-            b. Encapsulation dans l’héritage
-            <ol>
-              <li>i. Protection des membres (protected)</li>
-              <li>ii. Constructeurs des classes (this(), super())</li>
-              <li>iii. Classe ‘Object’</li>
-              <li>iv. Transtypage implicite et explicite</li>
-              <li>v. Limitation de l’héritage (final)</li>
-            </ol>
-          </li>
-          <li>
-            c. Polymorphisme
-            <ol>
-              <li>i. Surcharge de méthodes</li>
-              <li>ii. Redéfinition de méthodes</li>
-            </ol>
-          </li>
-          <li>d. Classes abstraites (utilisation et importance)</li>
-          <li>e. Interfaces (utilisation et importance)</li>
-        </ol>
-
-        <h4>Mode d’évaluation :</h4>
-        <p>Examen (60%), contrôle continu (40%)</p>
-
-        <h4>Références</h4>
-        <ol>
-          <li>
-            Apprendre la Programmation Orientée Objet avec le langage Java. Luc
-            Gervais. Eni. 2ème édition.
-          </li>
-          <li>
-            <a
-              href="https://openclassrooms.com/courses/apprenez-a-programmer-en-java"
-              >https://openclassrooms.com/courses/apprenez-a-programmer-en-java</a
-            >
-          </li>
-          <li>
-            Java 8 - Apprendre la Programmation Orientée Objet et maîtrisez le
-            langage. Thierry GROUSSARD Luc GERVAIS. Edition ENI. 2015.
-          </li>
-          <li>
-            La programmation objet en Java. Michel Divay. Edition DUNOD. 2006.
-          </li>
-        </ol>
-      </div> -->
       <div class="rightBar"><h3>Site under construction</h3></div>
     </div>
-   
-      <script src="src/footer.js"></script></div>
-     
+
+    <script src="src/footer.js"></script>
   </body>
 </html>
