--- a/index.html
+++ b/index.html
@@ -76,17 +76,12 @@ Dr Hamdani University of Tissemsilt -->
       </div>
 
       <div class="content">
-           <!-- <object data="OOP/OOP Java.pdf" type="application/pdf" width="100%" height="100%"> -->
-            <embed
-            src="OOP/OOP Java.pdf"
-            type="application/pdf"
-            width="100%"
-            height="600px"
-         />
+           <object data="OOP/OOP Java.pdf" type="application/pdf" width="100%" height="100%">
+           
           </div>
 
-      <div class="rightBar"><h3>Site under construction</h3></div>
-    </div>
+      <!-- <div class="rightBar"><h3>Site under construction</h3></div>
+    </div> -->
 
     <script src="src/footer.js"></script>
   </body>
