apply ifram for poo and devWeb

--- a/index.html
+++ b/index.html
@@ -76,8 +76,13 @@ Dr Hamdani University of Tissemsilt -->
       </div>
 
       <div class="content">
-           <object data="OOP/OOP Java.pdf" type="application/pdf" width="100%" height="100%">
-           
+        <iframe
+            src="OOP/OOP Java.pdf"
+            width="100%"
+            height="600px"
+            loading="lazy"
+            title="PDF-file"
+    ></iframe>
           </div>
 
       <!-- <div class="rightBar"><h3>Site under construction</h3></div>
