--- a/webDev.html
+++ b/webDev.html
@@ -93,8 +93,15 @@ Dr Hamdani University of Tissemsilt -->
       </div>
 
       <div class="content">
-        <object data="DevWeb/Web Dev.pdf" type="application/pdf" width="100%" height="100%">
-      </div>
+       
+        <div class="content">
+          <iframe
+              src="DevWeb/Web Dev.pdf"
+              width="100%"
+              height="600px"
+              loading="lazy"
+              title="PDF-file"
+      ></iframe>
 
       <!-- <div class="rightBar"><h3>Site under construction</h3></div>
     </div> -->
