--- a/index.html
+++ b/index.html
@@ -76,13 +76,14 @@ Dr Hamdani University of Tissemsilt -->
       </div>
 
       <div class="content">
-        <iframe
-            src="OOP/OOP Java.pdf"
-            width="100%"
-            height="600px"
-            loading="lazy"
-            title="PDF-file"
-    ></iframe>
+        <object 
+              data="OOP/OOP Java.pdf" 
+              type="application/pdf" 
+              width="100%" 
+              height="100%">
+          <!-- Fallback content in case the browser does not support embedded PDFs -->
+          <a href="OOP/OOP Java.pdf">Download PDF</a>
+      </object>
           </div>
 
       <!-- <div class="rightBar"><h3>Site under construction</h3></div>
