--- a/webDev.html
+++ b/webDev.html
@@ -94,15 +94,16 @@ Dr Hamdani University of Tissemsilt -->
 
       <div class="content">
        
-        <div class="content">
-          <iframe
-              src="DevWeb/Web Dev.pdf"
-              width="100%"
-              height="600px"
-              loading="lazy"
-              title="PDF-file"
-      ></iframe>
-
+         
+          <object 
+          data="DevWeb/Web Dev.pdf" 
+          type="application/pdf" 
+          width="100%" 
+          height="100%">
+      <!-- Fallback content in case the browser does not support embedded PDFs -->
+      <a href="OOP/OOP Java.pdf">Download PDF</a>
+  </object>
+</div>
       <!-- <div class="rightBar"><h3>Site under construction</h3></div>
     </div> -->
 
