--- a/src/header.html
+++ b/src/header.html
@@ -1,5 +1,5 @@
 <header class="headerPage">
-  <div><img src="img/logo.png" alt="logo" /></div>
+   <img src="img/logo.png" alt="logo" /> 
   <div>
     <h4>
       Ministry of Higher Education and Scientific Research <br />
@@ -8,13 +8,13 @@
       Department of Mathematics and Computer Sciences
     </h4>
   </div>
-  <div><img src="img/logo.png" alt="logo" /></div>
+  <img src="img/logo.png" alt="logo" /> 
 </header>
-<div class="titlePage">
+<!-- <div class="titlePage">
   <div><h3>Courses : Computer Science</h3></div>
   <div><h3>Speciality : ISIL</h3></div>
   <div><h3>Semester : 04</h3></div>
-</div>
+</div> -->
 <!-- test -->
 <nav class="navBar">
   <a href="index.html">Object-Orriented Proramming</a>
