add XML  course

--- a/webDev.html
+++ b/webDev.html
@@ -53,10 +53,16 @@ Dr Hamdani University of Tissemsilt -->
                 >Manipulating forms with JS.pdf</a
               >
             </li>
+            <li>
+              <a href="DevWeb/05 XML.pdf"
+                >XML.pdf</a
+              >
+            </li>
+
             <li>PHP</li>
             <ul>
               <li>
-                <a href="DevWeb/05 PHP Introduction.pdf"
+                <a href="DevWeb/06 PHP Introduction.pdf"
                   >Introduction to PHP.pdf</a
                 >
               </li>
