abstract and interfaces

--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@ Dr Hamdani University of Tissemsilt -->
               <a
                 href="https://github.com/hamdani2023/javaPOO_ISIL_S04"
                 target="_blank"
-                >Java Projects</a
+                >Java Projects (01)</a
+              >
+            </li>
+
+            <li>
+              <a
+                href="https://github.com/hamdani2023/Abstract_Interface"
+                target="_blank"
+                >Abstract Classes and Interfaces</a
               >
             </li>
           </ul>
