add php and mysql link

--- a/webDev.html
+++ b/webDev.html
@@ -97,6 +97,14 @@ Dr Hamdani University of Tissemsilt -->
                 >Creating and deploying a Site (this)</a
               >
             </li>
+
+            <li>
+              <a
+                href="https://github.com/hamdani2023/phpMySQL"
+                target="_blank"
+                >PHP and MySQL</a
+              >
+            </li>
           </ol>
         </div>
 
@@ -120,7 +128,7 @@ Dr Hamdani University of Tissemsilt -->
           width="100%" 
           height="100%">
       <!-- Fallback content in case the browser does not support embedded PDFs -->
-      <a href="OOP/OOP Java.pdf">Download PDF</a>
+      <a href="DevWeb/Web Dev.pdf">Download PDF</a>
   </object>
 </div>
       <!-- <div class="rightBar"><h3>Site under construction</h3></div>
