change interface and replace object by html

--- a/src/header.html
+++ b/src/header.html
@@ -1,5 +1,5 @@
 <header class="headerPage">
-   <img src="img/logo.png" alt="logo" /> 
+  <img src="img/logo.png" alt="logo" />
   <div>
     <h4>
       Ministry of Higher Education and Scientific Research <br />
@@ -8,14 +8,12 @@
       Department of Mathematics and Computer Sciences
     </h4>
   </div>
-  <img src="img/logo.png" alt="logo" /> 
+  <img src="img/logo.png" alt="logo" />
 </header>
-<!-- <div class="titlePage">
-  <div><h3>Courses : Computer Science</h3></div>
-  <div><h3>Speciality : ISIL</h3></div>
-  <div><h3>Semester : 04</h3></div>
-</div> -->
-<!-- test -->
+<div class="title">
+  <h1>Online Course Materials</h1>
+  <h2> Academic year : 2023 - 2024</h2>
+</div>
 <nav class="navBar">
   <a href="index.html">Object-Orriented Proramming</a>
   <a href="webDev.html">Web Developement</a>
