--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!-- How to use flex?
-Dr Hamdani University of Tissemsilt -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,47 +7,36 @@ Dr Hamdani University of Tissemsilt -->
     <link href="CSS/index.css" rel="stylesheet" />
     <link href="CSS/headPage.css" rel="stylesheet" />
     <link href="CSS/navBar.css" rel="stylesheet" />
-
     <link href="CSS/sideBar.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <script src="src/header.js"></script>
 
-    <div class="grid-page">
+    <div class="page">
       <div class="leftBar">
-        <div class="author">
-          <h3>
-            Lecturer : <br />
-            Dr. HAMDANI MUSTAPHA
-          </h3>
-        </div>
+        <h2>Lecturer</h2>
+        <ul>
+          <li>Dr. HAMDANI MUSTAPHA</li>
+        </ul>
 
         <div>
           <h3>Download : OOP-with-Java</h3>
           <ul>
             <li>
-              <a href="OOP/OOP 01 -Introduction.pdf">
-                Introduction to OOP.pdf
-              </a>
+              <a href="OOP/OOP 01 -Introduction.pdf">Introduction to OOP.pdf</a>
             </li>
-
             <li>
-              <a href="OOP/OOP 02 -IntroductionToJava.pdf">
-                Introduction to Java.pdf
-              </a>
+              <a href="OOP/OOP 02 -IntroductionToJava.pdf"
+                >Introduction to Java.pdf</a
+              >
             </li>
-
+            <li><a href="OOP/OOP 03 Encap.pdf">Encapsulation.pdf</a></li>
+            <li><a href="OOP/OOP 04 Inheritance.pdf">Inheritance.pdf</a></li>
             <li>
-              <a href="OOP/OOP 03 Encap.pdf"> Encapsulation.pdf </a>
-            </li>
-
-            <li>
-              <a href="OOP/OOP 04 Inheritance.pdf">Inheritance.pdf</a>
-            </li>
-
-            <li>
-              <a href="OOP/OOP 05 Plym-abst-interface.pdf">Polymorphism, Abstract Classes and Interfaces.pdf</a>
+              <a href="OOP/OOP 05 Plym-abst-interface.pdf"
+                >Polymorphism, Abstract Classes and Interfaces.pdf</a
+              >
             </li>
           </ul>
         </div>
@@ -65,7 +51,6 @@ Dr Hamdani University of Tissemsilt -->
                 >Java Projects (01)</a
               >
             </li>
-
             <li>
               <a
                 href="https://github.com/hamdani2023/Abstract_Interface"
@@ -87,20 +72,10 @@ Dr Hamdani University of Tissemsilt -->
         </div>
       </div>
 
-      <div class="content">
-        <object 
-              data="OOP/OOP Java.pdf" 
-              type="application/pdf" 
-              width="100%" 
-              height="100%">
-          <!-- Fallback content in case the browser does not support embedded PDFs -->
-          <a href="OOP/OOP Java.pdf">Download PDF</a>
-      </object>
-          </div>
+      <div id="content-placeholder" class="content"></div>
+    </div>
 
-      <!-- <div class="rightBar"><h3>Site under construction</h3></div>
-    </div> -->
-
+    <script src="src/canevasPOO.js"></script>
     <script src="src/footer.js"></script>
   </body>
 </html>
